updated width of options and label does not wrapped around Select to fix closing dropdown bug

--- a/src/components/common/select/select.scss
+++ b/src/components/common/select/select.scss
@@ -34,7 +34,7 @@
 }
 .options {
   cursor: pointer;
-  width: 91%;
+  width: 95%;
   display: none;
   position: absolute;
   top: 1.5em; 
